--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,16 @@
 [build]
 target = "riscv64gc-unknown-none-elf"
 
+[features]
+board_qemu = []
+board_other = []
+
+
 [target.riscv64gc-unknown-none-elf]
 rustflags = [
     # use liner.ld as linker settings
-    "-Clink-arg=-Tsrc/linker.ld",
+    "-Clink-arg=-L./linker",
+    "-Clink-arg=-Trustsbi.ld",
     # force keep the assembly codes of the frame pointers in object file
-    "-Cforce-frame-pointers=yes",
+    "-Cforce-frame-pointers=no",
 ]
