--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 
 [dependencies]
 sbi = "0.2.0"
+cfg-if = "0.1"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 
 [features]
+default = ["board_qemu"]
 board_qemu = []
-board_other = []
