--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ edition = "2021"
 [dependencies]
 log = "0.4"
 sbi = "0.2.0"
-cfg-if = "0.1.10"
+cfg-if = "1.0.0"
 enum-group = "0.1.2"
 thiserror-no-std = "2.0.2"
+buddy_system_allocator = "0.9.0"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 
