--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ buddy_system_allocator = "0.9.0"
 virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
 elf = { version = "0.7.2", default-features = false }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+frontier_lib = { path = "../frontier_lib" }
 frontier_fs = { path = "../frontier_fs" }
 
 [features]
