--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,18 @@ edition = "2021"
 [dependencies]
 log = "0.4.0"
 sbi = "0.2.0"
+fdt = "0.1.4"
 spin = "0.9.8"
 libm = "0.2.7"
 riscv = "0.11.1"
 bitflags = "2.4.0"
+volatile = "0.3"
 cfg-if = "1.0.0"
 bit_field = "0.10.2"
 enum-group = "0.1.2"
 thiserror-no-std = "2.0.2"
 buddy_system_allocator = "0.9.0"
-# virtio-drivers = "0.7.1"
-virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
+virtio-drivers = "0.7.1"
 elf = { version = "0.7.2", default-features = false }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 frontier_lib = { path = "../frontier_lib" }
